--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,9 @@
-API_ID=12334
-API_HASH=
-TOKEN=
-OWNER_ID=5938660179
-OWNER_USERNAME=Abishnoi1M
-SUPPORT_CHAT=AbishnoiMF
-EVENT_LOGS=-1001573019550
-MONGO_DB_URI=
-DATABASE_URL=
+API_ID=3330416
+API_HASH=551d747d492ad11a10054fbf672d16e3
+TOKEN=5262608425:AAEbUDcE2inIrSqmzdSTTJUDlVHeZF5pJw8
+OWNER_ID=1680004937
+OWNER_USERNAME=itsmeleave
+SUPPORT_CHAT=senzusupp
+EVENT_LOGS=-1001561812932
+MONGO_DB_URI=mongodb+srv://newsenzu:newsenzu@cluster0.m1mw8vk.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URL=postgres://cuzdcojj:2AN8Z057twoa-wDUIM5XIQsUTzqxkbqU@rajje.db.elephantsql.com/cuzdcojj
